--- a/Estructurado/Css/style.css
+++ b/Estructurado/Css/style.css
@@ -16,6 +16,7 @@ header{
     align-items: center;
     align-content: center;
     border-bottom: 3px solid black;
+    margin-bottom: 3px;
 }
 img{
     display: flex;
@@ -40,7 +41,24 @@ p{
     align-items: flex-end;
     align-content: flex-end;
 }
+.h{
+    width: 99%;
+    height: auto;
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    background: linear-gradient(to right, cyan, blue, cyan);
+    border-radius: 15px;
+}
+.h h1{
+    font-family: algerian;
+    color: white;
+    font-size: 2em
+}
 nav{
+    padding-top: 4px;
     width: 99%;
     height: auto;
     display: flex;
